style(fix): align open schedule dropdown with bottom of schedule bar

--- a/src/styles/BothNavbars.scss
+++ b/src/styles/BothNavbars.scss
@@ -11,6 +11,13 @@
   top: 0;
   z-index: 30;
   background-color: black;
+
+  .container {
+    @include touch {
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+  }
 }
 //==================================
 // <RadioBar />
@@ -20,6 +27,9 @@
   padding-top: 0.5rem;
   min-height: 5rem;
   margin-bottom: 0;
+  @include mobile {
+    padding-top: 1rem;
+  }
 
   #radioShowDetails {
     display: flex;
@@ -109,24 +119,15 @@
   color: white;
   border-bottom: 0.125rem solid white;
   min-height: 2.5rem;
-  background-color: rgba($color: $primary, $alpha: 0.25);
+  // background-color: rgba($color: $primary, $alpha: 0.25);
   padding-top: 0.25rem;
 
-  .up-next {
-    //   margin-top: 0;
-    //   margin-bottom: 0;
-  }
-  // // Make schedule-bar fullwidth on touch
-  // @include touch {
-  //   padding: 0 12px;
-  // }
-
-  // Set the schedule drawer to 25 rem
   &.is-open {
     height: auto;
   }
-  // Each columns div marginless;
-  // Each column has padding
+  .up-next {
+    margin-bottom: 0.375rem;
+  }
 }
 
 .upcoming {
